Add bash script to generate env file

--- a/flask/app_flask/static/style/main.css
+++ b/flask/app_flask/static/style/main.css
@@ -588,3 +588,5 @@ input::file-selector-button:active {
   background-color: var(--main-contrast-color-secondary);
   border-color: var(--main-contrast-color-secondary);
 }
+
+/* TODO, eliminar estilos no usados */
